--- a/cliente/templates/cadastro.html
+++ b/cliente/templates/cadastro.html
@@ -1,15 +1,8 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tito's Stock</title>
-</head>
-<body>
-    <h1>Tito's Stock</h1>
-    <h4>Cadastro de Cliente</h4>
+{% extends 'master.html' %}
+<!-- puxando todo conteudo da master para cadastro -->
 
-    <a href="{% url 'index' %}">Home</a>
-    <a href="{% url 'cadastro' %}">Cadastre-se</a>
-</body>
-</html>
+{% block content %}
+<h2>Cadastro de cliente</h2>
+{% endblock %}
+<!-- definindo o bloco de conteudo que ira aparecer na pagina de cadastro 
+    junto ao conteudo que foi puxado da master -->
