--- a/cliente/templates/index.html
+++ b/cliente/templates/index.html
@@ -1,15 +1,6 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tito's Stock</title>
-</head>
-<body>
-    <h1>Tito's Stock</h1>
-    <p>Sistema de gerenciamento de estoque</p>
+{% extends 'master.html' %}
+<!-- puxando todo conteudo da master para o index -->
 
-    <a href="{% url 'index' %}">Home</a>
-    <a href="{% url 'cadastro' %}">Cadastre-se</a>
-</body>
-</html>
+{% block content %}
+
+{% endblock %}
