--- a/cliente/templates/index_cliente.html
+++ b/cliente/templates/index_cliente.html
@@ -1,6 +1,6 @@
-{% extends 'master.html' %}
+{% extends 'master_cliente.html' %}
 <!-- puxando todo conteudo da master para o index -->
 
 {% block content %}
-
+    <h1>Esta é a home</h1>
 {% endblock %}
