--- a/cliente/templates/master_cliente.html
+++ b/cliente/templates/master_cliente.html
@@ -19,10 +19,9 @@
     <h1 style="color: white;">Tito's Stock</h1>
     <p style="color: white;">Sistema de gerenciamento</p>
 
-    <a style="color: white;" href="{% url 'index' %}">Home</a>
-    <a style="color: white;" href="{% url 'cadastro' %}">Cadastre-se</a>
-    <a style="color: white;" href="{% url 'listar' %}">Lista de Clientes</a>
-    <a style="color: white;" href="{% url 'estoque' %}">Estoque</a>
+    <a style="color: white;" href="{% url 'index_cliente' %}">Home</a>
+    <a style="color: white;" href="{% url 'cadastro_cliente' %}">Cadastre-se</a>
+    <a style="color: white;" href="{% url 'listar_cliente' %}">Lista de Clientes</a>
     <!-- definindo a rota que ia ao clicar nessas opçoes -->
 </nav>
 
